fixed infoPanel height and added overflow scroll

--- a/css/map.css
+++ b/css/map.css
@@ -6,10 +6,13 @@ body {
   width: 100%;
 }
 
+
+
 .c-map-header {
     border-bottom: 2px solid #f9f9f9;
     background-color: #0f3d4c;
     height: 5rem;
+    width: 100%;
 }
 
 .c-map-header__title {
@@ -226,20 +229,27 @@ input[type=search] {
   color:#ddd;
 }
 
+/*debatable?*/
+/*@media (max-width: 767px) and (orientation: portrait) {
+    .c-autocomplete {
+        width: 155%;
+    }
+}*/
+
 /* ========================================================================== */
 
 .infoPanel {
   background-color: rgba(15,61,76,0.9);
-  border-right: 1px solid #eee;
   color: #fff;
   display: none;
   height: calc(100vh - 8.5rem);
-  padding: 1em 2em;
+  padding: 2rem;
   width: 0%;
   position: absolute;
   left: 0;
   top: 5rem;
-  z-index: 2;
+  overflow-y: scroll;
+
 }
 .infoPanel.is-open {
   width:25%;
@@ -261,16 +271,11 @@ input[type=search] {
     width:40%;
     display:block;
   }
-  .infoPanel {
-    min-height: calc(100vh - 8.125rem);
-  }
+
   .c-map-header {
       height: 6rem;
   }
 
-  .map {
-      height: calc(100vh - 9.5rem);
-  }
   .c-map-header {
       padding: .5rem 1rem;
   }
@@ -285,20 +290,47 @@ input[type=search] {
     .map {
         height: calc(100vh - 11rem);
     }
+    .infoPanel {
+      height: calc(100vh - 10rem);
+      top: 6rem;
+    }
 }
 
 @media (min-width: 1024px) and (orientation: portrait) {
     .map {
         height: calc(100vh - 9.5rem);
     }
+    .infoPanel {
+      height: calc(100vh - 9.5rem);
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+    .map {
+        height: calc(100vh - 8.5rem);
+    }
+    .infoPanel {
+      height: calc(100vh - 8.5rem);
+      top: 6rem;
+   }
+}
+
+@media (min-width: 1366px) and (orientation: landscape) {
+    .map {
+        height: calc(100vh - 8.5rem);
+    }
+    .infoPanel {
+      height: calc(100vh - 8.5rem);
+      top: 5rem;
+   }
 }
 
 @media (max-width: 767px) {
   .infoPanel {
     border-right: 0;
     position: absolute;
-    top:5em;
-    min-height: calc(100vh - 12rem);
+    top:4em;
+    min-height: calc(100vh - 7.5rem);
     min-width: 100%;
   }
 
